@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [mms] SECURITY: Fix XSS vulnerability on smartmobile contacts details page (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mjr] Fix ActiveSync global address book searches when using LDAP as backend (Bug #12089).
  </notes>
  <contents>
@@ -1580,6 +1581,7 @@
    <date>2013-02-20</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [mms] SECURITY: Fix XSS vulnerability on smartmobile contacts details page (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mjr] Fix ActiveSync global address book searches when using LDAP as backend (Bug #12089).
    </notes>
   </release>
