@@ -2,6 +2,8 @@
 v4.0.4-git
 ----------
 
+[mms] SECURITY: Fix XSS vulnerability on smartmobile contacts details page
+      (João Machado <geral@jpaulo.eu>).
 [mjr] Fix ActiveSync global address book searches when using LDAP as backend
       (Bug #12089).
 
